--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.1",
+    "gulp": "^3.9.1",
     "jquery": "^3.1.1",
+    "laravel-elixir": "^6.0.0-18",
+    "laravel-elixir-vue": "^0.1.8",
+    "laravel-elixir-webpack-official": "^1.0.10",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
