--- a/bower.json
+++ b/bower.json
@@ -29,5 +29,7 @@
     "components-font-awesome": "5.0.6",
     "mustache.js": "mustache#^2.3.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "tinymce": "^4.7.13"
+  }
 }
