--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
   },
   "devDependencies": {
     "axios": "^0.16.2",
+    "babel-loader": "7.1.2",
+    "bootstrap": "^4.1.1",
     "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.1",
-    "gulp": "^3.9.1",
-    "jquery": "^3.1.1",
+    "cross-env": "^5.2.0",
+    "gulp": "^4.0.0",
+    "jquery": "^3.3.1",
     "laravel-elixir": "^6.0.0-18",
     "laravel-elixir-vue": "^0.1.8",
     "laravel-elixir-webpack-official": "^1.0.10",
-    "laravel-mix": "^1.0",
+    "laravel-mix": "^2.1.11",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "node-sass": "^4.9.0",
+    "sass-loader": "^6.0.6",
+    "select2": "^4.0.6-rc.1",
+    "sweetalert": "^2.1.0",
+    "vue": "^2.1.10",
+    "webpack": "^3.6.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dragula": "^3.7.2",
+    "popper.js": "^1.14.3"
+  }
 }
