--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "dragula": "^3.7.2",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "slug": "^0.9.1"
   }
 }
