--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:/bXoGlUrDSj5KT2EVa7PRD7ecNes/jXzkE5FAku1sC4=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -31,3 +30,6 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+DOMAIN_ADMIN=admin.skazki-chernomora.com
+DOMAIN_CLIENT=site.skazki-chernomora.com
