--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,6 @@
     "mustache.js": "mustache#^2.3.0"
   },
   "devDependencies": {
-    "tinymce": "^4.7.13"
+    "tinymce": "tinymce-dist#^4.8.3"
   }
 }
