--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@fortawesome/fontawesome-free": "^5.3.1",
     "axios": "^0.16.2",
     "babel-loader": "7.1.2",
-    "bootstrap": "^4.1.1",
     "bootstrap-notify": "^3.1.3",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.2.0",
@@ -26,14 +25,16 @@
     "lodash": "^4.17.4",
     "node-sass": "^4.11.0",
     "sass-loader": "^6.0.6",
-    "select2": "^4.0.6-rc.1",
-    "sweetalert": "^2.1.0",
     "vue": "^2.1.10",
     "webpack": "^3.6.0"
   },
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "dragula": "^3.7.2",
     "popper.js": "^1.14.3",
-    "slug": "^0.9.2"
+    "jquery-ui": "^1.12.1",
+    "select2": "^4.0.6-rc.1",
+    "slug": "^0.9.2",
+    "sweetalert": "^2.1.0"
   }
 }
