--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   "dependencies": {
     "bootstrap": "^4.1.1",
     "dragula": "^3.7.2",
-    "popper.js": "^1.14.3",
     "jquery-ui": "^1.12.1",
+    "popper.js": "^1.14.3",
     "select2": "^4.0.6-rc.1",
     "slug": "^0.9.2",
-    "sweetalert": "^2.1.0"
+    "sweetalert": "^2.1.0",
+    "tinymce": "^5.0.1"
   }
 }
