--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "laravel-elixir-vue": "^0.1.8",
     "laravel-elixir-webpack-official": "^1.0.10",
     "laravel-mix": "^2.1.14",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "sass-loader": "^6.0.6",
     "vue": "^2.1.10",
@@ -30,8 +30,10 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "datatables.net-dt": "^1.10.19",
     "dragula": "^3.7.2",
     "jquery-ui": "^1.12.1",
+    "mustache": "^3.0.1",
     "popper.js": "^1.14.3",
     "select2": "^4.0.6-rc.1",
     "slug": "^0.9.2",
