Slider: added title and subtitle

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,3 @@
 {
-    "/vali-admin/js/app.js": "/vali-admin/js/app.js",
-    "/main_theme/css/style.css": "/main_theme/css/style.css",
-    "/main_theme/js/scripts.js": "/main_theme/js/scripts.js"
+    "/vali-admin/js/app.js": "/vali-admin/js/app.js"
 }
