--- a/bower.json
+++ b/bower.json
@@ -17,14 +17,8 @@
   ],
   "dependencies": {
     "bootstrap-select": "^1.13.1",
-    "slick-carousel": "^1.8.1",
     "jquery": "^3.3.1",
-    "animate.css": "^3.5.2",
-    "fancybox": "fancyBox#^3.3.5",
     "jquery-validation": "^1.17.0",
-    "wow": "wowjs#^1.1.2",
-    "jQuery.ptTimeSelect": "^0.8.2",
-    "components-font-awesome": "5.0.6",
-    "mustache.js": "mustache#^2.3.0"
+    "jQuery.ptTimeSelect": "^0.8.2"
   }
 }
