--- a/package.json
+++ b/package.json
@@ -11,28 +11,29 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.3.1",
-    "axios": "^0.16.2",
+    "axios": "^0.19.0",
     "babel-loader": "7.1.2",
     "bootstrap-notify": "^3.1.3",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.2.0",
     "gulp": "^4.0.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "laravel-elixir": "^6.0.0-18",
     "laravel-elixir-vue": "^0.1.8",
     "laravel-elixir-webpack-official": "^1.0.10",
     "laravel-mix": "^2.1.14",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "node-sass": "^4.11.0",
     "sass-loader": "^6.0.6",
     "vue": "^2.1.10",
     "webpack": "^3.6.0"
   },
   "dependencies": {
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.3.1",
     "datatables.net-bs4": "^1.10.19",
     "dragula": "^3.7.2",
     "jquery-ui": "^1.12.1",
+    "jquery.scrollto": "^2.1.2",
     "mustache": "^3.0.1",
     "popper.js": "^1.14.3",
     "select2": "^4.0.6-rc.1",
