Added Site Color

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,5 @@
 {
-    "/vali-admin/js/app.js": "/vali-admin/js/app.js"
+    "/vali-admin/js/app.js": "/vali-admin/js/app.js",
+    "/vali-admin/css/app.css": "/vali-admin/css/app.css",
+    "/miracle/js/miracle.js": "/miracle/js/miracle.js"
 }
