--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 /node_modules
-/public/hot
-/public/storage
 /public/mix-manifest.json
 /storage/*.key
 /vendor
 /.idea
-/.vagrant
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
+/public/images/
 .env
-package-lock.json
+.package-lock.json
