--- a/package.json
+++ b/package.json
@@ -11,21 +11,18 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.3.1",
-    "axios": "^0.19.0",
     "babel-loader": "7.1.2",
     "bootstrap-notify": "^3.1.3",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.2.0",
-    "gulp": "^4.0.0",
+    "css-loader": "^3.4.2",
     "jquery": "^3.4.1",
     "laravel-elixir": "^6.0.0-18",
-    "laravel-elixir-vue": "^0.1.8",
     "laravel-elixir-webpack-official": "^1.0.10",
     "laravel-mix": "^2.1.14",
     "lodash": "^4.17.15",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^6.0.6",
-    "vue": "^2.1.10",
     "webpack": "^3.6.0"
   },
   "dependencies": {
