--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 /.idea
 /public/images/
 .env
-.package-lock.json
+/package-lock.json
 /public/vali-admin/js/app.js
 /public/vali-admin/css/app.css
 /public/miracle/js/miracle.js
+/yarn.lock
