--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.3.1",
     "babel-loader": "7.1.2",
     "bootstrap-notify": "^3.1.3",
     "bootstrap-sass": "^3.3.7",
@@ -26,9 +25,11 @@
     "webpack": "^3.6.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.3.1",
     "datatables.net-bs4": "^1.10.19",
     "dragula": "^3.7.2",
+    "inputmask": "^5.0.3",
     "jquery-ui": "^1.12.1",
     "jquery.scrollto": "^2.1.2",
     "mustache": "^3.0.1",
