--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /public/images/
 .env
 /package-lock.json
+/composer.lock
 /public/vali-admin/js/app.js
 /public/vali-admin/css/app.css
 /public/miracle/js/miracle.js
