--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "sass-loader": "^6.0.6",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "postcss-loader": "^3.0.0",
+    "resolve-url-loader": "^3.1.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.3.1",
-    "datatables.net": "^1.10.20",
     "datatables.net-bs4": "^1.10.20",
     "dragula": "^3.7.2",
     "inputmask": "^5.0.3",
@@ -35,8 +36,6 @@
     "jquery.scrollto": "^2.1.2",
     "mustache": "^3.0.1",
     "popper.js": "^1.14.3",
-    "postcss-loader": "^3.0.0",
-    "resolve-url-loader": "^3.1.1",
     "select2": "^4.0.13",
     "slug": "^0.9.2",
     "style-loader": "^1.1.3",
