--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=skazki
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -27,5 +27,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-DOMAIN_ADMIN=admin.skazki-chernomora.com
-DOMAIN_CLIENT=site.skazki-chernomora.com
+DOMAIN_ADMIN=admin.skazki-chernomora.local
+DOMAIN_CLIENT=site.skazki-chernomora.local
+DOMAIN_CLIENT1=vitebsk.skazki-chernomora.local
+DOMAIN_CLIENT2=polotsk.skazki-chernomora.local
