--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "filp/whoops": "~2.0",
         "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "~1.4",
+        "laravel/homestead": "^10.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~6.0"
     },
@@ -33,6 +34,9 @@
         },
         "files": [
             "app/helpers.php"
+        ],
+        "exclude-from-classmap": [
+            "vendor/symfony/contracts/"
         ]
     },
     "autoload-dev": {
