--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.5",
         "filp/whoops": "~2.0",
         "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "laravel/homestead": "^10.4"
     },
     "autoload": {
         "classmap": [
